# karp

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  numbers.odt  org.kde.deafed.desktop  org.kde.deafed.json  org.kde.deafed.metainfo.xml  org.kde.karp.desktop  org.kde.karp.json  org.kde.karp.metainfo.xml
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle  version.gradle.in
extras/: FilePathTest.qml
po/ar/: karp.po
po/ca/: karp.po
po/ca@valencia/: karp.po
po/cs/: karp.po
po/de/: karp.po
po/eo/: karp.po
po/es/: karp.po
po/eu/: karp.po
po/fr/: karp.po
po/ga/: karp.po
po/gl/: karp.po
po/he/: karp.po
po/hi/: karp.po
po/ia/: karp.po
po/it/: karp.po
po/ka/: karp.po
po/ko/: karp.po
po/lt/: karp.po
po/nl/: karp.po
po/pl/: karp.po
po/pt_BR/: karp.po
po/sa/: karp.po
po/sk/: karp.po
po/sl/: karp.po
po/sv/: karp.po
po/tr/: karp.po
po/ug/: karp.po
po/uk/: karp.po
po/zh_CN/: karp.po
po/zh_TW/: karp.po
src/: CMakeLists.txt  Messages.sh  app.cpp  app.h  bookmarkmodel.cpp  bookmarkmodel.h  deafed.cpp  deafed.h  deafedconfig.kcfg  deafedconfig.kcfgc  karpconfig.kcfg  karpconfig.kcfgc  main.cpp  outline.cpp  outline.h  pagerange.cpp  pagerange.h  pagesrenderer.cpp  pagesrenderer.h  pdfdocument.cpp  pdfdocument.h  pdfeditmodel.cpp  pdfeditmodel.h  pdffile.cpp  pdffile.h  pdfmetadata.cpp  pdfmetadata.h  pdfpage.cpp  pdfpage.h  pdfpageitem.cpp  pdfpageitem.h  pdfsorganizer.cpp  pdfsorganizer.h  qpdfproxy.cpp  qpdfproxy.h  toolsthread.cpp  toolsthread.h
src/contents/ui/: Main.qml
src/qml/: Actions.qml  BookmarkDialog.qml  BookmarksPane.qml  EditDelegate.qml  Main.qml  MainPage.qml  MainToolbar.qml  PdfFileDelegate.qml  PdfView.qml
src/qml/Bookmarks/: BookmarksView.qml  OutlineDialog.qml  TOCView.qml
src/qml/Dialogs/: ExportDialog.qml  MovePagesDialog.qml  OrganizerDialog.qml  PdfFileDelegate.qml  PdfFilesDialog.qml  PdfMetadataDialog.qml  PdfPassDialog.qml  PdfVersionDialog.qml  SelectPagesDialog.qml
src/qml/Messages/: InitialInfo.qml  ProgressDialog.qml
src/qml/Settings/: FormPathDelegate.qml  General.qml  PdfTools.qml  SettingsPage.qml
src/ui/: About.qml  ArrangePage.qml  DeletedDelegate.qml  EditDelegate.qml  Main.qml  MainPage.qml  MainToolbar.qml  PdfFilesDialog.qml  PdfMetadataDialog.qml  SelectPagesDialog.qml
src/ui/Messages/: MissingPdfTool.qml  ProgressDialog.qml
src/ui/Settings/: FormPathDelegate.qml  General.qml  PdfTools.qml  SettingsPage.qml
